[tool.poetry]
name = "librematch-shared"
version = "0.1.0"
description = ""
authors = ["librematch-authors"]
license = "AGPL-3.0-or-later"
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
